--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ height: 230px; /* Maintains aspect ratio */
         <p style="font-size: 28px;">This part of the webpage will be dedicated to my profile.I am Raj Godwin E. Baldeviso, I am a student of Antique National School.I will keep this pretty simple due to me being a pretty mundane person,I am into art and specifically traditional art because i like the feel that the pencil and brush have, although i know that digital art now has tools that make it so you feel like your painting/drawing traditionally on a tablet, theres just a different feeling a physical pencil/brush has that i cant really pinpoint to what it is.
                                     As for my other interest,It would be video games,Video games have played a pretty substantial roll in my life as it has shaped a part of my personality and how i tackle certain obstacles in life,And as for the games i like, i like turnbased games,action games,souls like games,metroidvania games and platformgames.
         </p>
-        <center><img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/iron%20fist.jpg" class="profile-image"></center>
+        <center><img src="iron%20fist.jpg" class="profile-image"></center>
     </div>
   </div>
   
