--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/The%20big%203.jpg");
+  background-image: url("The%20big%203.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -204,7 +204,7 @@
       position: relative;
       width: 100%;
       height: 140vh;
-      background-image: url("file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/fat%20rice%20cat.jpg");
+      background-image: url("fat%20rice%20cat.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
