--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@ height: 230px; /* Maintains aspect ratio */
 <div class="gallery-header"></div></color><big><center>MY ARTWORKS</center></big></div>
 <div id="Overview" class="gallery">
 
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/jolly%20and%20tatus.jpg" class="active" alt="Artwork 1">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/dulungan.jpg" alt="Artwork 2">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/woman%20holding%20a%20pot.jpg" alt="Artwork 3">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/oil%20painting%20of%20fruits%20and%20wine.jpg" alt="Artwork 4">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/white%20rooster.jpg" alt="Artwork 5">
+  <img src="jolly%20and%20tatus.jpg" class="active" alt="Artwork 1">
+  <img src="dulungan.jpg" alt="Artwork 2">
+  <img src="woman%20holding%20a%20pot.jpg" alt="Artwork 3">
+  <img src="oil%20painting%20of%20fruits%20and%20wine.jpg" alt="Artwork 4">
+  <img src="white%20rooster.jpg" alt="Artwork 5">
 
 
   <div class="controls">
