--- a/index.html
+++ b/index.html
@@ -452,10 +452,11 @@ height: 230px; /* Maintains aspect ratio */
 </div>
 <div id="School Life" class="school-section">
     <div class="content">
-        <h1 style="font-size: 50px;"><center><big>Profile</big></center></h1>
-        <p style="font-size: 28px;">This part of the webpage will be dedicated to my profile.I am Raj Godwin E. Baldeviso, I am a student of Antique National School.I will keep this pretty simple due to me being a pretty mundane person,I am into art and specifically traditional art because i like the feel that the pencil and brush have, although i know that digital art now has tools that make it so you feel like your painting/drawing traditionally on a tablet, theres just a different feeling a physical pencil/brush has that i cant really pinpoint to what it is.
-                                    As for my other interest,It would be video games,Video games have played a pretty substantial roll in my life as it has shaped a part of my personality and how i tackle certain obstacles in life,And as for the games i like, i like turnbased games,action games,souls like games,metroidvania games and platformgames.
-        </p>
+       <h1 style="font-size: 50px;"><center><big>School life</big></center></h1>
+      <p style="font-size: 28px;">School has been pretty unforgiving these past couple of years but also pretty fun, i would like to thank my teachers and friends for making it an unforgettable experience, a memory that wpuld calm my nerves down when i look back at it. all the laughter and jokes will always ring through my ears no matter how old i get.
+                                  this will be my last month attending ANS because ill be graduating soon and moving schools but will never forget the experience and joy that i had in this school,all the activities,events and lessons that i learned will forever be in mind,although its bittersweet this school and the peoaple that i met in it will always have a special place in my heeart.
+                                  everytime i'll look back at these memories i just know that a massive wave of nostalgia will drown me but ill smile knowing that i had the best years of highschool that i can ever ask for.
+      </p>
     </div>
 
 <div class="gallery-header"></div></color><big><center>MY ARTWORKS</center></big></div>
