--- a/Profile-ict.html
+++ b/Profile-ict.html
@@ -123,7 +123,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url("file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/fat%20rice%20cat.jpg");
+      background-image: url("fat%20rice%20cat.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -177,11 +177,11 @@
       <div class="navdiv">
 		<div class="logo" style="color: #C0C0C0; font-size: 30px; font-weight: normal;"></div>
         <ul>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Home.html">Home</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Profile-ict.html">Profile</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Family-ict.html">Family</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/School%20life-ict.html">School Life</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Specialization-ict.html">Specialization</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Profile-ict.html">Profile</a></li>
+            <li><a href="Family-ict.html">Family</a></li>
+            <li><a href="School%20life-ict.html">School Life</a></li>
+            <li><a href="Specialization-ict.html">Specialization</a></li>
 
         </ul>
        
@@ -196,7 +196,7 @@
       <p style="font-size: 20px;">This part of the webpage will be dedicated to my profile.I am Raj Godwin E. Baldeviso, I am a student of Antique National School.I will keep this pretty simple due to me being a pretty mundane person,I am into art and specifically traditional art because i like the feel that the pencil and brush have, although i know that digital art now has tools that make it so you feel like your painting/drawing traditionally on a tablet, theres just a different feeling a physical pencil/brush has that i cant really pinpoint to what it is.
                                   As for my other interest,It would be video games,Video games have played a pretty substantial roll in my life as it has shaped a part of my personality and how i tackle certain obstacles in life,And as for the games i like, i like turnbased games,action games,souls like games,metroidvania games and platformgames.
       </p>
-     <center><img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/iron%20fist.jpg" class="profile-image"></center>
+     <center><img src="iron%20fist.jpg" class="profile-image"></center>
     
     </div>
   </div>
