--- a/School life-ict.html
+++ b/School life-ict.html
@@ -123,7 +123,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url("file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/before%20the%20great%20cut.jpg");
+      background-image: url("before%20the%20great%20cut.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -172,11 +172,11 @@
       <div class="navdiv">
 		<div class="logo" style="color: #C0C0C0; font-size: 30px; font-weight: normal;"></div>
         <ul>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Home.html">Home</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Profile-ict.html">Profile</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Family-ict.html">Family</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/School%20life-ict.html">School Life</a></li>
-            <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Specialization-ict.html">Specialization</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Profile-ict.html">Profile</a></li>
+            <li><a href="Family-ict.html">Family</a></li>
+            <li><a href="School%20life-ict.html">School Life</a></li>
+            <li><a href="Specialization-ict.html">Specialization</a></li>
 
         </ul>
        
