--- a/Specialization-ict.html
+++ b/Specialization-ict.html
@@ -74,7 +74,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url("file:///C:/Users/USER/Downloads/Raj_notepad++/Raj_notepad++/fat%20rice%20cat.jpg");
+      background-image: url("fat%20rice%20cat.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -154,11 +154,11 @@
 
 <nav>
   <ul>
-    <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Home.html">Home</a></li>
-    <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Profile-ict.html">Profile</a></li>
-    <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Family-ict.html">Family</a></li>
-    <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/School%20life-ict.html">School Life</a></li>
-    <li><a href="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/School%20life%20webpage/Specialization-ict.html">Specialization</a></li>
+    <li><a href="Home.html">Home</a></li>
+    <li><a href="Profile-ict.html">Profile</a></li>
+    <li><a href="Family-ict.html">Family</a></li>
+    <li><a href="School%20life-ict.html">School Life</a></li>
+    <li><a href="Specialization-ict.html">Specialization</a></li>
   </ul>
 </nav>
 
@@ -167,11 +167,11 @@
   <div class="gallery-header"><big>MY ARTWORKS</big></div>
 <div id="Overview" class="gallery">
   <!-- Updated image paths to reflect images inside the "images" folder -->
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/jolly%20and%20tatus.jpg" class="active" alt="Artwork 1">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/dulungan.jpg" alt="Artwork 2">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/woman%20holding%20a%20pot.jpg" alt="Artwork 3">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/oil%20painting%20of%20fruits%20and%20wine.jpg" alt="Artwork 4">
-  <img src="file:///C:/Users/Glady/Downloads/Raj_notepad++-20250309T135225Z-001/Raj_notepad++/Raj_notepad++/white%20rooster.jpg" alt="Artwork 5">
+  <img src="jolly%20and%20tatus.jpg" class="active" alt="Artwork 1">
+  <img src="dulungan.jpg" alt="Artwork 2">
+  <img src="woman%20holding%20a%20pot.jpg" alt="Artwork 3">
+  <img src="oil%20painting%20of%20fruits%20and%20wine.jpg" alt="Artwork 4">
+  <img src="white%20rooster.jpg" alt="Artwork 5">
 
   <!-- Controls -->
   <div class="controls">
