--- a/Family-ict.html
+++ b/Family-ict.html
@@ -214,8 +214,8 @@
   
   <footer style="background-color:#D44E4E; color: black; text-align: center; padding: 15px 20px; position: relative; bottom: 0; width: 100%; font-size: 16px; border-top: 2px solid #444;">
   <div class="footer-content">
-    <h4></h4>&copy; 2025 Fat Rice Cat. All Rights Reserved.</h4>
-    <h4>Creator of webpage: Raj Godwin</h4>
+    <h4></h4>&copy; 2025 Raj Godwin E. Baldeviso SPA-10. All Rights Reserved.</h4>
+    <h4>Creator of webpage: FatRiceCat</h4>
      
 </footer>
 
