--- a/Specialization-ict.html
+++ b/Specialization-ict.html
@@ -182,8 +182,8 @@
 
 <footer>
   <div class="footer-content">
-    <h4>© 2025 Fat Rice Cat. All Rights Reserved.</h4>
-    <h4>Creator of webpage: Raj Godwin</h4>
+    <h4>© 2025 Raj Godwin E. Baldeviso SPA-10. All Rights Reserved.</h4>
+    <h4>Creator of webpage: FatRiceCat</h4>
   </div>
 </footer>
 
