--- a/School life-ict.html
+++ b/School life-ict.html
@@ -122,7 +122,7 @@
     .background {
       position: relative;
       width: 100%;
-      height: 100vh;
+      height: 120vh;
       background-image: url("before%20the%20great%20cut.jpg");
       background-size: cover;
       background-position: center;
@@ -187,7 +187,9 @@
 	
 	 <div id="Overview" class="background">
     <div class="content">
-      <h1 style="font-size: 50px;"><center><big>School life</big></center></h1>
+	      <h1 style="font-size: 50px;"><center><big>School life</big></center></h1>
+      <p style="font-size: 28px;">My earlier days in school were pretty important into teaching me the basics,I have very fond memories of it as thats where i was introduced to most of my current friends,It was dissapointing that i didnt get to finish grade 5 and 6 properly due to covid.
+     
       <p style="font-size: 28px;">School has been pretty unforgiving these past couple of years but also pretty fun, i would like to thank my teachers and friends for making it an unforgettable experience, a memory that wpuld calm my nerves down when i look back at it. all the laughter and jokes will always ring through my ears no matter how old i get.
                                   this will be my last month attending ANS because ill be graduating soon and moving schools but will never forget the experience and joy that i had in this school,all the activities,events and lessons that i learned will forever be in mind,although its bittersweet this school and the peoaple that i met in it will always have a special place in my heeart.
                                   everytime i'll look back at these memories i just know that a massive wave of nostalgia will drown me but ill smile knowing that i had the best years of highschool that i can ever ask for.
